[project]
name = "kusto-tool"
dynamic = ["version"]
description = ""
authors = [
    {name = "Alex Kyllo", email = "alex.kyllo@gmail.com"},
]
dependencies = [
    "azure-kusto-data>=3.0.0",
]
requires-python = ">=3.7.1"
license = {text = "MIT"}

[project.urls]
homepage = ""

[project.optional-dependencies]
[tool]
[tool.pdm]
version = {from = "src/kusto_tool/__init__.py"}
[tool.pdm.dev-dependencies]
dev = [
    "black>=21.12b0",
    "pylint>=2.12.2",
    "pytest>=6.2.5",
    "nox>=2022.1.7",
    "furo>=2022.1.2",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
