[project]
name = "kusto-tool"
dynamic = ["version"]
description = "A high-level API for Kusto."
authors = [
    {name = "Alex Kyllo", email = "alex.kyllo@gmail.com"},
]
dependencies = [
    "azure-kusto-data>=3.0.0",
    "loguru>=0.5.3",
    "azure-cli>=2.32.0",
    "jinja2>=3.0.3",
    "pandas>=1.3.5",
]
requires-python = ">=3.7.1"
license = {text = "MIT"}

[project.urls]
homepage = ""

[project.optional-dependencies]
[tool]
[tool.pytest]
[tool.pytest.ini_options]
testpaths = ["tests"]
[tool.coverage]
[tool.coverage.run]
source = ["src/"]
[tool.pdm]
version = {from = "src/kusto_tool/__init__.py"}
[tool.pdm.dev-dependencies]
dev = [
    "black>=21.12b0",
    "pylint>=2.12.2",
    "pytest>=6.2.5",
    "nox>=2022.1.7",
    "furo>=2022.1.2",
    "coverage>=6.2",
    "pytest-cov>=3.0.0",
    "sphinx>=4.4.0",
    "sphinx-autobuild>=2021.3.14",
    "pytest-mock>=3.6.1",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
