[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "kusto_tool"
authors = [{name = "Alex Kyllo", email = "alex.kyllo@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["azure-kusto-data", "loguru", "Jinja2", "pandas"]

[project.optional-dependencies]
azure-cli = ["azure-cli"]
dev = [
    "black",
    "pylint",
    "pytest",
    "nox",
    "furo",
    "coverage",
    "pytest-cov",
    "sphinx",
    "sphinx-autobuild",
    "pytest-mock",
]

[project.urls]
Home = "https://github.com/alexkyllo/kusto-tool"

[tool]
[tool.isort]
profile = "black"
[tool.pytest]
[tool.pytest.ini_options]
testpaths = ["tests"]
[tool.coverage]
[tool.coverage.run]
source = ["src/"]